--- a/2_with Spark_partition_and_EDA.ipynb
+++ b/2_with Spark_partition_and_EDA.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a975c5f",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6e2be0ad-a272-48ea-98c0-ce6aa327e6b3",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "45bde787-1b90-4aa7-8e62-cf1dd75145df",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "601abe28-c635-43c6-b2cd-6343295ca31b",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "91894eeb-fa65-4ec0-a7d4-2e64ad8d06eb",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "2fc9e8ce-9dd8-4339-9119-d29c77c5c258",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "fc2b8308-d264-4a8a-afe5-aded8235cf41",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "2184cfe4-e038-49df-9ec4-2e720312cd30",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "ee9e2b86-e1dd-4011-8033-824e0b2cfcaf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "53887633-1a9d-48da-bddb-a44ce2bfeccc",
    "metadata": {},
    "outputs": [
@@ -341,37 +341,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "975fc22c-a7af-4506-b48d-8d1a49cb70c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(_c0='be', _c1='trois-frontieres)/f/n/plans_cartes.php 20240812104747 {\"url\": \"https://www.trois-frontieres.be/F/N/plans_cartes.php\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"302\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/n/sources.php 20240812110044 {\"url\": \"https://www.trois-frontieres.be/F/N/sources.php\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"302\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/n/trains.php 20240812112818 {\"url\": \"https://www.trois-frontieres.be/F/N/trains.php\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"302\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/n/viaduc.php 20240812100754 {\"url\": \"https://www.trois-frontieres.be/F/N/viaduc.php\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"302\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/n/welkenraedt_tout_savoir.php 20240812103816 {\"url\": \"https://www.trois-frontieres.be/F/N/welkenraedt_tout_savoir.php\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"302\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/nom_fam_prof.php 20240812004417 {\"url\": \"https://www.trois-frontieres.be/F/nom_fam_prof.php\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=eynatten%204731 20240812095325 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=EYNATTEN%204731\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=fouron%20le%20comte%203798 20240812094731 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=FOURON%20LE%20COMTE%203798\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=fouron%20st%20martin%203790 20240812094347 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=FOURON%20ST%20MARTIN%203790\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=fouron%20st%20pierre%203792 20240812102419 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=FOURON%20St%20PIERRE%203792\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=gemmenich%204851 20240812113450 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=GEMMENICH%204851\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=hauset%204730 20240812102352 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=HAUSET%204730\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=henri-chapelle%204841 20240812113353 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=HENRI-CHAPELLE%204841\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=kettenis%204701 20240812103332 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=KETTENIS%204701\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"'),\n",
-       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=la%20calamine%204720 20240812113016 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=LA%20CALAMINE%204720\"', _c2=' \"mime\": \"text/html\"', _c3=' \"mime-detected\": \"text/html\"', _c4=' \"status\": \"200\"')]"
+       "[Row(_c0='be', _c1='trois-frontieres)/f/n/plans_cartes.php 20240812104747 {\"url\": \"https://www.trois-frontieres.be/F/N/plans_cartes.php\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/n/sources.php 20240812110044 {\"url\": \"https://www.trois-frontieres.be/F/N/sources.php\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/n/trains.php 20240812112818 {\"url\": \"https://www.trois-frontieres.be/F/N/trains.php\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/n/viaduc.php 20240812100754 {\"url\": \"https://www.trois-frontieres.be/F/N/viaduc.php\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/n/welkenraedt_tout_savoir.php 20240812103816 {\"url\": \"https://www.trois-frontieres.be/F/N/welkenraedt_tout_savoir.php\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/nom_fam_prof.php 20240812004417 {\"url\": \"https://www.trois-frontieres.be/F/nom_fam_prof.php\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=eynatten%204731 20240812095325 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=EYNATTEN%204731\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=fouron%20le%20comte%203798 20240812094731 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=FOURON%20LE%20COMTE%203798\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=fouron%20st%20martin%203790 20240812094347 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=FOURON%20ST%20MARTIN%203790\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=fouron%20st%20pierre%203792 20240812102419 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=FOURON%20St%20PIERRE%203792\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=gemmenich%204851 20240812113450 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=GEMMENICH%204851\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=hauset%204730 20240812102352 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=HAUSET%204730\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=henri-chapelle%204841 20240812113353 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=HENRI-CHAPELLE%204841\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=kettenis%204701 20240812103332 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=KETTENIS%204701\"', _c2=' \"mime\": \"text/html\"'),\n",
+       " Row(_c0='be', _c1='trois-frontieres)/f/pensions_bb.php?search=la%20calamine%204720 20240812113016 {\"url\": \"https://www.trois-frontieres.be/F/pensions_BB.php?search=LA%20CALAMINE%204720\"', _c2=' \"mime\": \"text/html\"')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_zipped.select(df_zipped.columns[:5]).take(15)"
+    "df_zipped.select(df_zipped.columns[:3]).take(15)"
    ]
   },
   {
@@ -902,6 +902,14 @@
     "#### NOTE: Saves files in different folder as the data has been paritioned\n",
     "- "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13ca960c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
