new script added

--- a/2_with Spark_partition_and_EDA.ipynb
+++ b/2_with Spark_partition_and_EDA.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7a975c5f",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6e2be0ad-a272-48ea-98c0-ce6aa327e6b3",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "45bde787-1b90-4aa7-8e62-cf1dd75145df",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3a2094f5-57b6-495c-92f6-87c27d857c3b",
    "metadata": {},
    "outputs": [],
@@ -146,12 +146,12 @@
    "id": "c1acad62-9124-43fc-9f1d-e7ae803ef5ff",
    "metadata": {},
    "source": [
-    "### Reaad with spark session"
+    "### Read with spark session"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f8a39625-7a1a-47e9-aba6-7661a66c0e6a",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "601abe28-c635-43c6-b2cd-6343295ca31b",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "91894eeb-fa65-4ec0-a7d4-2e64ad8d06eb",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "2fc9e8ce-9dd8-4339-9119-d29c77c5c258",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "fc2b8308-d264-4a8a-afe5-aded8235cf41",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "2184cfe4-e038-49df-9ec4-2e720312cd30",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "ee9e2b86-e1dd-4011-8033-824e0b2cfcaf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "53887633-1a9d-48da-bddb-a44ce2bfeccc",
    "metadata": {},
    "outputs": [
@@ -337,6 +337,27 @@
    ],
    "source": [
     "df_zipped_.show(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "072cb0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9858933"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zipped_.count()"
    ]
   },
   {
