new update on scripts

--- a/2_with Spark_partition_and_EDA.ipynb
+++ b/2_with Spark_partition_and_EDA.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "#### Objective:\n",
     "- use the kernel from `Anaconda` to use `pyspark` package\n",
-    "- EDA with spark on compressed file"
+    "- EDA with spark on compressed file\n",
+    "\n",
+    "- Repartitioning the spark dataframe:\n",
+    "    - If plan to write this DataFrame to disk, especially as Parquet files, repartitioning can help control the number and size of output files."
    ]
   },
   {
@@ -293,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ee9e2b86-e1dd-4011-8033-824e0b2cfcaf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "53887633-1a9d-48da-bddb-a44ce2bfeccc",
    "metadata": {},
    "outputs": [
@@ -340,24 +343,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b130212-a192-4e74-9aa3-b4f44523aea0",
+   "metadata": {},
+   "source": [
+    "##### Save as Parquet format"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "072cb0b2",
+   "execution_count": 16,
+   "id": "71306d46-57ba-49c4-a238-24e63354ab29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9858933"
+       "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_zipped_.count()"
+    "df_zipped_.rdd.getNumPartitions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d451b807-6c4b-496f-a277-3f3f28c91b90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_zipped_=df_zipped_.repartition(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ccd28089-370a-4b04-9ec2-28ae99b06257",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zipped_.rdd.getNumPartitions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42f6ddbe-2c6e-41ac-9598-ee668ca1c475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "df_zipped_.write.parquet(\"2024_00008.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eaaf714-b5e0-4112-8825-98d311baaf8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%time\n",
+    "# df_zipped_.write.mode(\"overwrite\").parquet(\"data/2024_00008.parquet\")"
    ]
   },
   {
@@ -393,6 +457,27 @@
    ],
    "source": [
     "df_zipped.select(df_zipped.columns[:3]).take(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "072cb0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9858933"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zipped_.count()"
    ]
   },
   {
