--- a/scripts/2_EDA_on_web_Crawled_data.ipynb
+++ b/scripts/2_EDA_on_web_Crawled_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0d551ac2-1a5e-46f0-9af7-81b2944767e5",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "id": "25de91fa-648c-40b7-9ded-039e90e0865c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "id": "90c7abf2-1d98-49ca-abf7-35cea6cb36d6",
    "metadata": {},
    "outputs": [],
@@ -964,7 +964,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -978,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
