--- a/scripts/2_eda_on_aws_CrawlData.ipynb
+++ b/scripts/2_eda_on_aws_CrawlData.ipynb
@@ -79,6 +79,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "587f461c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path to data source\n",
+    "path= \"../../data_aws/cdx-00009.gz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "7846ae43-80d5-4f82-a0c2-5201a60b07b8",
    "metadata": {},
    "outputs": [],
@@ -88,12 +99,12 @@
     "#     .csv(\"../data_sources/AWS_web_crawl/cdx-00000\")\n",
     "\n",
     "df_web = spark.read\\\n",
-    "    .csv(\"../data_sources/AWS_web_crawl/cdx-00000\")"
+    "    .csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "bf390084-1a0e-4e53-a539-f30b9689bb08",
    "metadata": {},
    "outputs": [
@@ -101,15 +112,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+---+---+--------------------+--------------------+--------------------+----------------+--------------------+-----------------+--------------------+--------------------+--------------------+--------------------+\n",
-      "|_c0|_c1|_c2|                 _c3|                 _c4|                 _c5|             _c6|                 _c7|              _c8|                 _c9|                _c10|                _c11|                _c12|\n",
-      "+---+---+---+--------------------+--------------------+--------------------+----------------+--------------------+-----------------+--------------------+--------------------+--------------------+--------------------+\n",
-      "|  0| 11|248|207)/ 20231209181...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"V33MY...|  \"length\": \"985\"|  \"offset\": \"246822\"| \"filename\": \"cra...| \"charset\": \"ISO-...| \"languages\": \"eng\"}|\n",
-      "|  0| 11|248|207)/robots.txt 2...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"404\"| \"digest\": \"AS23R...| \"length\": \"1112\"|    \"offset\": \"4988\"| \"filename\": \"cra...|                NULL|                NULL|\n",
-      "|  0| 11|248|207:5661)/robots....| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"404\"| \"digest\": \"LUWHV...|  \"length\": \"836\"|    \"offset\": \"1853\"| \"filename\": \"cra...|                NULL|                NULL|\n",
-      "|  0| 11|248|207:5661)/sipweb/...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"BLHK6...| \"length\": \"3088\"|  \"offset\": \"222228\"| \"filename\": \"cra...|  \"charset\": \"UTF-8\"| \"languages\": \"por\"}|\n",
-      "|  0|111|128|178)/ 20231210132...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"JIFCQ...| \"length\": \"4586\"| \"offset\": \"93798...| \"filename\": \"cra...|  \"charset\": \"UTF-8\"| \"languages\": \"eng\"}|\n",
-      "+---+---+---+--------------------+--------------------+--------------------+----------------+--------------------+-----------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "+---+--------------------+--------------------+--------------------+----------------+--------------------+-------------------+--------------------+--------------------+-------------------+------------------+----+--------------------+\n",
+      "|_c0|                 _c1|                 _c2|                 _c3|             _c4|                 _c5|                _c6|                 _c7|                 _c8|                _c9|              _c10|_c11|                _c12|\n",
+      "+---+--------------------+--------------------+--------------------+----------------+--------------------+-------------------+--------------------+--------------------+-------------------+------------------+----+--------------------+\n",
+      "|biz|decenter)/event-d...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"I4JIP...| \"length\": \"193243\"| \"offset\": \"79817...| \"filename\": \"cra...| \"charset\": \"UTF-8\"| \"languages\": \"jpn|eng\"| \"truncated\": \"le...|\n",
+      "|biz|decenter)/event-d...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"DRC5L...| \"length\": \"193057\"| \"offset\": \"79926...| \"filename\": \"cra...| \"charset\": \"UTF-8\"| \"languages\": \"jpn|eng\"| \"truncated\": \"le...|\n",
+      "|biz|decenter)/event-d...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"PZXIR...| \"length\": \"193179\"| \"offset\": \"79365...| \"filename\": \"cra...| \"charset\": \"UTF-8\"| \"languages\": \"jpn|eng\"| \"truncated\": \"le...|\n",
+      "|biz|decenter)/event-d...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"FBHY3...| \"length\": \"192871\"| \"offset\": \"77188...| \"filename\": \"cra...| \"charset\": \"UTF-8\"| \"languages\": \"jpn|eng\"| \"truncated\": \"le...|\n",
+      "|biz|decenter)/event-d...| \"mime\": \"text/html\"| \"mime-detected\":...| \"status\": \"200\"| \"digest\": \"ETD44...| \"length\": \"192856\"| \"offset\": \"78742...| \"filename\": \"cra...| \"charset\": \"UTF-8\"| \"languages\": \"jpn|eng\"| \"truncated\": \"le...|\n",
+      "+---+--------------------+--------------------+--------------------+----------------+--------------------+-------------------+--------------------+--------------------+-------------------+------------------+----+--------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "f49acfed-f3f2-4b73-af9b-b1eff1673ff5",
    "metadata": {},
    "outputs": [
@@ -129,48 +140,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+---+---+--------------------+\n",
-      "|_c0|_c1|_c2|                 _c3|\n",
-      "+---+---+---+--------------------+\n",
-      "|  0| 11|248|207)/ 20231209181...|\n",
-      "|  0| 11|248|207)/robots.txt 2...|\n",
-      "|  0| 11|248|207:5661)/robots....|\n",
-      "|  0| 11|248|207:5661)/sipweb/...|\n",
-      "|  0|111|128|178)/ 20231210132...|\n",
-      "+---+---+---+--------------------+\n",
+      "+--------------------+\n",
+      "|                 _c2|\n",
+      "+--------------------+\n",
+      "| \"mime\": \"text/html\"|\n",
+      "| \"mime\": \"text/html\"|\n",
+      "| \"mime\": \"text/html\"|\n",
+      "| \"mime\": \"text/html\"|\n",
+      "| \"mime\": \"text/html\"|\n",
+      "+--------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df_web[[\"_c0\", \"_c1\", \"_c2\",\"_c3\"]].show(5)"
+    "df_web[[\"_c2\"]].show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "269a6fc3-f64f-4bfa-af8f-f8090f2c32ff",
+   "execution_count": 27,
+   "id": "d1323736",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DataFrame[_c10: string]"
+       "<bound method DataFrame.count of DataFrame[_c2: string]>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_web[[\"_c10\"]]"
+    "df_web[[\"_c2\"]].count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63ee1314",
+   "metadata": {},
+   "source": [
+    "##### Get Schema of the `dataframe`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
+   "id": "269a6fc3-f64f-4bfa-af8f-f8090f2c32ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- _c0: string (nullable = true)\n",
+      " |-- _c1: string (nullable = true)\n",
+      " |-- _c2: string (nullable = true)\n",
+      " |-- _c3: string (nullable = true)\n",
+      " |-- _c4: string (nullable = true)\n",
+      " |-- _c5: string (nullable = true)\n",
+      " |-- _c6: string (nullable = true)\n",
+      " |-- _c7: string (nullable = true)\n",
+      " |-- _c8: string (nullable = true)\n",
+      " |-- _c9: string (nullable = true)\n",
+      " |-- _c10: string (nullable = true)\n",
+      " |-- _c11: string (nullable = true)\n",
+      " |-- _c12: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_web.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "2028261a-c20b-47ed-ba17-f226983e16ec",
    "metadata": {},
    "outputs": [],
@@ -219,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "ba5174df-b4c8-42a3-a5c9-ac034b52e1db",
    "metadata": {},
    "outputs": [
@@ -229,7 +280,7 @@
        "13"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,10 +301,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "db384122-50ad-4570-a486-d3d5aa68cb4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\daiko\\anaconda3\\Lib\\site-packages\\pyspark\\sql\\dataframe.py:329: FutureWarning: Deprecated in 2.0, use createOrReplaceTempView instead.\n",
+      "  warnings.warn(\"Deprecated in 2.0, use createOrReplaceTempView instead.\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "df_web.registerTempTable(\"web_database\")"
    ]
@@ -268,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "266e378b-4325-4431-a881-5c05618ffcba",
    "metadata": {},
    "outputs": [
@@ -279,7 +339,7 @@
       "+----------+\n",
       "|Total_Rows|\n",
       "+----------+\n",
-      "|  12554677|\n",
+      "|  14916360|\n",
       "+----------+\n",
       "\n"
      ]
@@ -314,21 +374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "bc56a97d-e994-4229-bba6-f72ede89ae3f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['_c0', '_c1', '_c2', '_c3', '_c4', '_c5', '_c6', '_c7', '_c8', '_c9',\n",
-       "       '_c10', '_c11', '_c12'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_parq' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_parq\u001b[38;5;241m.\u001b[39mcolumns\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_parq' is not defined"
+     ]
     }
    ],
    "source": [
@@ -628,7 +687,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
